<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="recipe"
            type="com.czp.recipe.data.model.Result" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".data.fragment.recipe.detail.RecipeDetailFragment">

        <ImageView
            android:id="@+id/detail_bg_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/main_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/backBtn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/circleImageDetailTopBtnStyle" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/collectBtn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/sc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/circleImageDetailTopBtnStyle" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/plate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backBtn" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView8"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            loadImageWithUrl="@{recipe.image}"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="@+id/imageView7"
            app:layout_constraintStart_toStartOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/imageView7"
            app:shapeAppearanceOverlay="@style/circleImageDetailStyle" />

        <View
            android:id="@+id/view8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/top_round_shape"
            app:layout_constraintBottom_toBottomOf="@+id/detail_bg_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <View
            android:id="@+id/view9"
            android:layout_width="56dp"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="#707070"
            app:layout_constraintEnd_toEndOf="@+id/view8"
            app:layout_constraintStart_toStartOf="@+id/view8"
            app:layout_constraintTop_toTopOf="@+id/view8" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@{recipe.title}"
            android:maxLines="2"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/detail_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view8"
            tools:text="@string/for_text" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/time_img"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/detail_time"
            app:layout_constraintTop_toBottomOf="@+id/view9" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="11dp"
            android:text="Min"
            android:textColor="#EBEBEA"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/view8"
            app:layout_constraintTop_toBottomOf="@+id/imageView9" />

        <TextView
            android:id="@+id/detail_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="383dp"
            tools:text="123"
            android:text="@{String.valueOf(recipe.readyInMinutes)}"
            android:textColor="#EBEBEA"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/chip4"
            changeStatus="@{recipe.cheap}"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:background="@drawable/round_solid_shape_for_detail_attr"
            android:textAlignment="center"
            android:maxLines="1"
            android:layout_marginTop="8dp"
            android:backgroundTint="#29262E"
            android:text="Cheap"
            android:textColor="@color/type_item_selector"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@+id/chip5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/detail_time" />

        <TextView
            android:id="@+id/chip7"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:background="@drawable/round_solid_shape_for_detail_attr"
            android:maxLines="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="#29262E"
            android:text="very Popular"
            changeStatus="@{recipe.veryPopular}"
            android:textAlignment="center"
            android:textColor="@color/type_item_selector"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/chip6"
            app:layout_constraintTop_toTopOf="@+id/chip6" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip8"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#29262E"
            android:textAlignment="center"
            android:textColor="@color/bottom_btn_selected_color"
            android:textSize="17sp"
            app:chipCornerRadius="30dp"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chip4" />

        <com.google.android.material.chip.Chip
            android:id="@+id/indicatorView"
            android:layout_width="180dp"
            android:layout_height="54dp"
            android:layout_marginStart="3dp"
            android:backgroundTint="@color/shimmer_item_background"
            app:chipCornerRadius="27dp"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="@+id/chip8"
            app:layout_constraintStart_toStartOf="@+id/chip8"
            app:layout_constraintTop_toTopOf="@+id/chip8" />

        <TextView
            android:id="@+id/chip5"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:background="@drawable/round_solid_shape_for_detail_attr"
            android:textAlignment="center"
            android:maxLines="1"
            android:layout_marginStart="3dp"
            android:text="Very Healthy"
            changeStatus="@{recipe.veryHealthy}"
            android:textColor="@color/type_item_selector"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@+id/chip6"
            app:layout_constraintStart_toEndOf="@+id/chip4"
            app:layout_constraintTop_toTopOf="@+id/chip4" />

        <TextView
            android:id="@+id/chip6"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:background="@drawable/round_solid_shape_for_detail_attr"
            android:textAlignment="center"
            android:maxLines="1"
            android:layout_marginStart="3dp"
            android:backgroundTint="#29262E"
            android:text="Vegan"
            changeStatus="@{recipe.vegan}"
            android:textColor="@color/type_item_selector"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@+id/chip7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/chip5"
            app:layout_constraintTop_toTopOf="@+id/chip5" />

        <TextView
            android:id="@+id/detailBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:textColor="@color/type_item_selector"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/chip8"
            app:layout_constraintEnd_toStartOf="@+id/ingredientBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/chip8"
            app:layout_constraintTop_toTopOf="@+id/chip8" />

        <TextView
            android:id="@+id/ingredientBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:textColor="@color/type_item_selector"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/detailBtn"
            app:layout_constraintEnd_toEndOf="@+id/chip8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/detailBtn"
            app:layout_constraintTop_toTopOf="@+id/detailBtn" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chip8" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>